Fix missing character issue on iOS Safari

--- a/wasm/www/src/styles.css
+++ b/wasm/www/src/styles.css
@@ -348,7 +348,8 @@ a {
 }
 
 .legend>ul>li::before {
-    content: "⸺";
+    content: "———";
+    font-family: monospace;
     margin-right: 0.1em;
     font-weight: bold;
 }
@@ -358,7 +359,7 @@ a {
 }
 
 #manualComparisons>li::before {
-    content: "– –";
+    content: "— —";
 }
 
 .legend>ul>li.color0::before {
